[package]
name = "polygonify"
version = "0.1.0"
edition = "2018"

# [lib]
# name = "polygonify"
# path = "src/lib.rs"

[[bin]]
name = "polygonify"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
dotenv = "0.15.0"
geo = "0.19.0"
geojson = "0.22.3"
num-traits = "0.2.14"
rand = "0.8.5"
serde = "1.0.136"
serde-pickle = "1.1.0"
serde_json = "1.0.79"
