[package]
name = "polygonify"
version = "0.1.0"
edition = "2018"

[lib]
name = "polygonify"
path = "src/lib.rs"

[[bin]]
name = "polygonify"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "3.2.23", features = ["derive"] }
geo = "0.20.1"
geo-types = "0.7.8"
num-traits = "0.2.15"
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.91"
wkt = "0.10.3"
